spacing fix terms page

--- a/client/src/pages/Company/Terms.css
+++ b/client/src/pages/Company/Terms.css
@@ -1,3 +1,4 @@
 .Terms-container{
     width: 70% !important;
+    margin-top: 110px;
 }
